test/libsolidity/syntaxTests/types/rational_number_literal_limit.sol
contract c {
    function bignum() public {
        uint e;
        e = 1e9999;
    }
}
// ----
// TypeError: Invalid literal value.
